Archive2/5f/2da8a28ac0a2ec/output
main.cpp: In function 'int main()':
main.cpp:11:8: error: unused variable 'a' [-Werror=unused-variable]
    int a = 3;
        ^
cc1plus: all warnings being treated as errors
